--- a/src/components/Modules/Explorer/Records/Transaction/Sections/TransactionMultiSig/TransactionMultiSig.scss
+++ b/src/components/Modules/Explorer/Records/Transaction/Sections/TransactionMultiSig/TransactionMultiSig.scss
@@ -8,6 +8,18 @@
       font-weight: bold;
     }
     .transaction-multi-sig-body {
+      .threshold-version-container {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+        .value {
+          color: $color-primary;
+          font-size:120%;
+          margin-left: 10px;
+        }
+        margin-bottom: 15px;
+      }
       .value.column {
         flex-direction: column;
         align-items: flex-start !important;
